# maimaidx-net-client

./: .gitignore
.devcontainer/: devcontainer.json
backend/: .gitignore  Cargo.toml
backend/.devcontainer/: add_ca_certificate.sh  devcontainer.json
backend/src/: crawler.rs  main.rs  parser.rs
frontend/: .gitignore  package.json
frontend/.devcontainer/: devcontainer.json  postCreateCommand.sh
frontend/src/: App.vue
frontend/src/components/: CommonHeader.vue  MainContainer.vue  ScoreTable.vue
frontend/src/components/score/: ScoreTable.vue  scoreRecord.ts
