[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
reqwest = { version = "0.11.11", features = ["cookies"] }
scraper = "0.13.0"
serde = "1.0.140"
tokio = { version = "1.20.0", features = ["full"] }
